kubernetes/ingress/ingress-fusionauth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fusionauth-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - fauth.northeurope.cloudapp.azure.com
      secretName: tls-secret
  rules:
    - host: fauth.northeurope.cloudapp.azure.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: fusionauth
                port:
                  number: 9011
